--- a/index.html
+++ b/index.html
@@ -167,7 +167,15 @@
     }
     .kickerIcon{width:18px;height:18px;display:inline-block}
 
-    h1{margin:10px 0 0; font-size:25px; line-height:1.15;}
+    .titleRow{
+      display:flex;
+      align-items:center;
+      justify-content:space-between;
+      gap:12px;
+      flex-wrap:wrap;
+      margin-top:10px;
+    }
+    h1{margin:0; font-size:25px; line-height:1.15;}
     .sub{
       margin:10px 0 0;
       color: var(--muted);
@@ -206,7 +214,7 @@
     .homeOverlay{
       position:absolute;
       left:18px; right:18px;
-      top: 212px; /* se ajusta para caer arriba del video (debajo de tabs y texto) */
+      top: 242px;
       border-radius: var(--r18);
       border: 1px solid rgba(68,196,242,.35);
       background: rgba(10,12,18,.72);
@@ -235,9 +243,12 @@
     .closeBtn:hover{border-color: rgba(255,255,255,.24)}
     .homeOverlayBody{
       padding: 14px;
-      max-height: 380px;
+      max-height: 420px;
       overflow:auto;
+      color: var(--text);
     }
+    .homeOverlayBody p{color:var(--muted); line-height:1.7; margin:0}
+    .homeOverlayBody h3{margin:0 0 10px; font-size:18px; color:var(--text)}
 
     .chip{
       display:inline-flex; align-items:center; gap:8px;
@@ -267,6 +278,27 @@
     }
     .homeVideo{width:100%; aspect-ratio:16/9; background:#070911;}
     iframe{width:100%; height:100%; border:0}
+
+    /* Presentación (texto imagen transcripto) */
+    .presentation{
+      margin-top: 14px;
+      border-radius: var(--r18);
+      border: 1px solid var(--stroke);
+      background: rgba(255,255,255,.04);
+      padding: 14px 14px;
+    }
+    .presentation h2{
+      margin:0 0 10px;
+      font-size:18px;
+      color:var(--text);
+      letter-spacing:.2px;
+    }
+    .presentation p{
+      margin:0;
+      font-size:14px;
+      color:var(--muted);
+      line-height:1.75;
+    }
 
     /* 3 Bloques: 1 vertical + 2 horizontales */
     .statsGrid{
@@ -301,8 +333,9 @@
       padding: 10px 0;
       border-bottom:1px solid rgba(255,255,255,.08);
       font-size: 15px;
+      color: var(--text);
     }
-    .statLine b{font-size:15px}
+    .statLine b{font-size:15px; color:var(--text)}
     .statLine span{color:var(--muted)}
     .statLine:last-child{border-bottom:0}
 
@@ -327,9 +360,9 @@
       font-weight:900;
       color:#fff;
     }
-    .profileTxt b{display:block; font-size:15px}
+    .profileTxt b{display:block; font-size:15px; color:var(--text)}
     .profileTxt span{display:block; font-size:14px; color:var(--muted2)}
-    .statNote{margin-top:10px; font-size:14px; color:var(--muted); line-height:1.55}
+    .statNote{margin-top:10px; font-size:14px; color: var(--muted); line-height:1.65}
 
     /* Player section */
     .playerWrap{padding:14px;}
@@ -347,7 +380,7 @@
       display:flex; justify-content:space-between; gap:12px; flex-wrap:wrap;
       align-items:flex-start;
     }
-    .lessonMeta h2{margin:0; font-size:18px; letter-spacing:.2px}
+    .lessonMeta h2{margin:0; font-size:18px; letter-spacing:.2px; color:var(--text)}
     .lessonMeta p{margin:8px 0 0; color: var(--muted); font-size:15px; line-height:1.55}
     .navBtns{display:flex; gap:10px; flex-wrap:wrap; align-items:center; justify-content:flex-end;}
 
@@ -357,7 +390,7 @@
       border-bottom: 1px solid var(--stroke);
       display:flex; flex-direction:column; gap:6px;
     }
-    .sideHead b{font-size:15px}
+    .sideHead b{font-size:15px; color:var(--text)}
     .sideHead span{font-size:14px; color: var(--muted2)}
 
     .search{padding: 12px 14px; border-bottom:1px solid var(--stroke); background: rgba(255,255,255,.03);}
@@ -384,12 +417,14 @@
       padding: 10px 12px;
       display:flex; align-items:center; justify-content:space-between; gap:10px;
       cursor:pointer; user-select:none;
+      color: var(--text);
     }
-    .moduleHead b{font-size:14px}
+    .moduleHead b{font-size:14px; color:var(--text)}
     .moduleHead span{font-size:14px; color: var(--muted2)}
     .moduleHead:hover{background: rgba(255,255,255,.04)}
     .moduleBody{padding: 0 8px 10px;}
 
+    /* Fuerzo texto BLANCO en lista (no más negro) */
     .lessonBtn{
       width:100%;
       text-align:left;
@@ -401,7 +436,9 @@
       cursor:pointer;
       transition: background .12s ease, border-color .12s ease, transform .08s ease;
       margin-top: 6px;
+      color: var(--text) !important;
     }
+    .lessonBtn *{color: var(--text) !important;}
     .lessonBtn:hover{
       background: rgba(68,196,242,.10);
       border-color: rgba(68,196,242,.18);
@@ -422,8 +459,8 @@
       flex:0 0 auto;
     }
 
-    .lt{margin:0; font-size:15px; font-weight:900; line-height:1.25;}
-    .ld{margin:4px 0 0; font-size:14px; color: var(--muted2); line-height:1.35;}
+    .lt{margin:0; font-size:15px; font-weight:900; line-height:1.25; color:var(--text) !important;}
+    .ld{margin:4px 0 0; font-size:14px; color: var(--muted2) !important; line-height:1.35;}
 
     /* Form */
     .formGrid{
@@ -446,11 +483,11 @@
 
     @media (max-width: 980px){
       .grid{grid-template-columns:1fr}
-      .brand{min-width:0}
       .statsGrid{grid-template-columns:1fr}
       .statVertical{grid-row:auto; min-height:auto}
-      .homeOverlay{left:12px; right:12px; top: 256px;}
+      .homeOverlay{left:12px; right:12px; top: 280px;}
       .formGrid{ grid-template-columns: 1fr; }
+      .titleRow{align-items:flex-start}
     }
   </style>
 </head>
@@ -462,7 +499,7 @@
         <div class="logoWrap" aria-hidden="true"><span>EM</span></div>
         <div class="brandTxt">
           <b>CURSO DE AFTER EFFECTS EXPERTO</b>
-          <span>Acceso por link · 19 videos / 20 clases</span>
+          <span>Acceso por link · 21 videos / 20 clases</span>
         </div>
       </div>
 
@@ -492,16 +529,20 @@
             Workshop · After Effects · Entorno 3D
           </div>
 
-          <h1>After Effects · Nivel Experto</h1>
+          <!-- Título + Empezar a la derecha (como pediste) -->
+          <div class="titleRow">
+            <h1>After Effects · Nivel Experto</h1>
+            <button class="btn solid" id="startBtn" type="button">▶ Empezar</button>
+          </div>
 
           <p class="sub">
-            Hola! bienvenido al curso de After effects nivel experto, donde aprenderas todas las tecnicas avanzadas para mejorar tus skills como diseñador audiovisual, aprenderas todos sobre el entorno 3D para que tus diseños de motion graphics esten a la altura de las grandes agencias creativas. A tu derecha tendras la lista con todos los videos del curso, podras verlos las veces que quieras.
+            Hola! bienvenido al curso de After effects nivel experto, donde aprenderas todas las tecnicas avanzadas para mejorar tus skills como diseñador audiovisual, aprenderas todo sobre el entorno 3D para que tus diseños de motion graphics esten a la altura de las grandes agencias creativas. A tu derecha tendras la lista con todos los videos del curso, podras verlos las veces que quieras.
           </p>
 
           <!-- TABS ARRIBA del video -->
           <div class="tabsRow">
             <button class="tabBtn" id="btnTopics" type="button">🧩 Grupo de temas</button>
-            <button class="tabBtn primary" id="btnDownloads" type="button"><b>Descargas de recursos:</b>&nbsp;Proyecto + recursos gráficos</button>
+            <button class="tabBtn primary" id="btnDownloads" type="button">Descargas de recursos</button>
             <button class="tabBtn primary" id="btnComments" type="button">💬 Comentarios</button>
           </div>
 
@@ -524,6 +565,19 @@
             </div>
           </div>
 
+          <!-- PRESENTACIÓN (texto transcripto de tu imagen) -->
+          <div class="presentation">
+            <h2>El curso que necesitas para potenciar tus habilidades en el mundo audiovisual</h2>
+            <p>
+              Durante este taller, te ayudaré a desarrollar las habilidades necesarias para convertirte en un artista y estar preparado para ingresar a un estudio o tener éxito como freelancer.
+              A través de este curso aprenderás técnicas y habilidades claves para convertirte en un profesional versátil capaz de trabajar en cualquier proyecto audiovisual.
+              El curso de <b>After Effects 3D</b> ha sido diseñado para adaptarse a estudiantes de todos los niveles, desde aquellos que recién comienzan en el mundo del diseño en movimiento,
+              hasta los que ya tienen experiencia y desean profundizar sus conocimientos. El contenido se enfoca en brindar una formación completa y detallada, para que puedas expandir tus habilidades
+              y desarrollar nuevas técnicas creativas, independientemente de tu nivel de experiencia previo. Si quieres crear gráficos en movimiento para diferentes industrias como videojuegos,
+              comerciales, películas, animaciones o web, este taller es para vos. <b>¡Inscribite hoy mismo!</b> y accede a todas las herramientas necesarias para llevar tus habilidades al siguiente nivel.
+            </p>
+          </div>
+
           <!-- BLOQUES (1 vertical + 2 horizontales) -->
           <div class="statsGrid">
             <!-- Vertical -->
@@ -533,20 +587,17 @@
 
                 <div class="statLine"><span>Duración total de clases</span><b>3h 40m aprox</b></div>
                 <div class="statLine"><span>Clases</span><b>20</b></div>
-                <div class="statLine"><span>Videos</span><b>19</b></div>
+                <div class="statLine"><span>Videos</span><b>21</b></div>
                 <div class="statLine"><span>Audio</span><b>Español</b></div>
                 <div class="statLine"><span>Última actualización</span><b>2026</b></div>
               </div>
 
-              <div style="display:flex; gap:10px; align-items:center; justify-content:space-between; flex-wrap:wrap;">
-                <div style="display:flex; gap:10px; align-items:center;">
-                  <span class="pill" id="pillInline">0 / 20</span>
-                </div>
-                <button class="btn solid" id="startBtn" type="button">▶ Empezar</button>
+              <div style="display:flex; gap:10px; align-items:center; justify-content:flex-start; flex-wrap:wrap;">
+                <span class="pill" id="pillInline">0 / 20</span>
               </div>
             </div>
 
-            <!-- Horizontal 1 -->
+            <!-- Horizontal 1: PROFESOR -->
             <div class="statCard statHoriz">
               <div class="hTop">
                 <div class="profile">
@@ -560,17 +611,17 @@
               </div>
 
               <div class="statNote">
-                Diseñador audiovisual & Motion Graphics. En este workshop vas a mejorar tu técnica y tu criterio para que tu laburo se vea pro, prolijo y “de agencia”.
+                Lic. en Producción y Realización Audiovisual, Director de Motion Graphics y Artista VFX. Me apasiona el arte, crear y nadar. Llevo más de 15 años trabajando en proyectos audiovisuales para Cine, TV, Publicidad y nuevas plataformas, diseñando para diferentes marcas y clientes. Te invito a recorrer este maravilloso universo audiovisual. ¡Te espero! <b>@emma_mel_</b>
               </div>
             </div>
 
-            <!-- Horizontal 2 -->
+            <!-- Horizontal 2: VALORACIÓN -->
             <div class="statCard statHoriz">
               <div class="hTop">
                 <div>
                   <div class="statTitle">Valoración del curso</div>
                   <div style="display:flex; align-items:baseline; gap:10px; margin-top:4px;">
-                    <div style="font-size:30px; font-weight:900;">4.8</div>
+                    <div style="font-size:30px; font-weight:900; color:var(--text);">4.9</div>
                     <div style="color:var(--muted2); font-size:14px;">Media total</div>
                   </div>
                 </div>
@@ -625,11 +676,10 @@
   </div>
 
   <script>
-    // Link de descargas
     const DOWNLOADS_LINK = "https://drive.google.com/drive/folders/1JwAskl-_V1mdrx0JIWpMMnkqJdgiq4yX?usp=drive_link";
 
-    // Clases 1..20 (20 clases / 19 videos: 05+06 juntos)
-    // OJO: El video final bZlzz87AVo4 va en módulo "Entrega" como pediste.
+    // Clases 01..20 (20 clases)
+    // IMPORTANTE: acá respeté tus links finales (17..20) y final.
     const lessons = [
       { t:"01 - Introducción", d:"Breve introducción al curso.", url:"https://youtu.be/D1IC09GeKZs" },
       { t:"02 - Retos de entorno 3D", d:"Arrancamos el workshop y el enfoque del entorno 3D.", url:"https://youtu.be/HVBjwflEPBA" },
@@ -646,25 +696,26 @@
       { t:"14 - Composición y Timing", d:"Ajustes globales de comp y ritmo.", url:"https://youtu.be/OHG0WslMs8M" },
       { t:"15 - Efectos de lighting", d:"Look final: profundidad, atmósfera e iluminación.", url:"https://youtu.be/8jx3xiaeruY" },
       { t:"16 - Efectos de Partículas 3D", d:"Partículas para elevar el impacto visual.", url:"https://youtu.be/JoGWgePrkeA" },
-      { t:"17 - Retoques de Composición", d:"Retoques finales de post y composición.", url:"https://youtu.be/Kb5NjjzP8ZU" },
-      { t:"18 - Optimización del proyecto", d:"Orden, rendimiento y limpieza del proyecto.", url:"https://youtu.be/I4njR2qgrZI" },
-      { t:"19 - Export Final", d:"Exportación final y entrega.", url:"https://youtu.be/Q5wg_VyTQ-o" },
-      { t:"20 - Visualización y análisis", d:"Cierre y análisis del resultado.", url:"https://youtu.be/ptSPBlNyoQ8" } /* si tu 20 real es otro, lo cambias acá */
+
+      // CORREGIDOS (según tus links)
+      { t:"17 - Retoques de Composición", d:"Retoques finales de post y composición.", url:"https://www.youtube.com/watch?v=MIBiBZC7uZ4" },
+      { t:"18 - Optimización del proyecto", d:"Orden, rendimiento y limpieza del proyecto.", url:"https://www.youtube.com/watch?v=Kb5NjjzP8ZU" },
+      { t:"19 - Export Final", d:"Exportación final y entrega.", url:"https://www.youtube.com/watch?v=I4njR2qgrZI" },
+      { t:"20 - Visualización y análisis", d:"Cierre y análisis del resultado.", url:"https://www.youtube.com/watch?v=sLxfVUPDj0o" }
     ];
 
-    // ====== MÓDULOS (como pediste ahora) ======
-    // Look & Post: videos 16 al 20 (clases 16..20)
-    // Entrega: solo el video final bZlzz87AVo4
+    // Resultado final (módulo aparte, solo este video)
+    const FINAL_VIDEO = { t:"Resultado final", d:"Entrega final del curso.", url:"https://www.youtube.com/watch?v=bZlzz87AVo4" };
+
+    // Módulos: Look & Post = 16..20 (clases 16-20) y Entrega = solo final
     const modules = [
       { id:"m1", name:"Inicio del Workshop", items:[0,1,2,3] },
       { id:"m2", name:"Preparación de recursos", items:[4] },
       { id:"m3", name:"After Effects + Estructura 3D", items:[5,6,7] },
       { id:"m4", name:"Animación", items:[8,9,10,11,12,13] },
-      { id:"m5", name:"Look & Post", items:[14,15,16,17,18] }, // clases 16..20 => indices 14..18 (16,17,18,19,20)
-      { id:"m6", name:"Entrega", finalOnly:true } // módulo especial (solo video final)
+      { id:"m5", name:"Look & Post", items:[14,15,16,17,18,19] }, // 16..20
+      { id:"m6", name:"Entrega", finalOnly:true }
     ];
-
-    const FINAL_VIDEO = { t:"Resultado final", d:"Entrega final del curso.", url:"https://youtu.be/bZlzz87AVo4" };
 
     // ====== DOM ======
     const q = document.getElementById("q");
@@ -700,7 +751,7 @@
     const closeHomeOverlay = document.getElementById("closeHomeOverlay");
 
     // ====== Progreso (manual) ======
-    const STORAGE_KEY = "aula_em_experto_v5";
+    const STORAGE_KEY = "aula_em_experto_v6";
     const progress = JSON.parse(localStorage.getItem(STORAGE_KEY) || "{}");
 
     function saveProgress(){
@@ -870,14 +921,13 @@
 
       modules.forEach(addModule);
 
-      // re-marcar activo si corresponde
       if(currentLesson !== null){
         const btn = document.querySelector(`.lessonBtn[data-i="${currentLesson}"]`);
         if(btn) btn.classList.add("active");
       }
     }
 
-    // ===== Home Overlay Tabs (encima del video, mismo lugar) =====
+    // ===== Home Overlay Tabs =====
     function showHomeOverlay(title, html){
       homeOverlayTitle.textContent = title;
       homeOverlayBody.innerHTML = html;
@@ -890,15 +940,30 @@
 
     btnDownloads.onclick = () => {
       showHomeOverlay("Descargas de recursos", `
-        <div style="font-size:14px;color:var(--muted);line-height:1.55;margin-bottom:12px;">
-          <b>Proyecto + recursos gráficos:</b> acceso directo a Drive.
-        </div>
+        <h3>Descargas de recursos</h3>
+        <p style="margin-bottom:12px;">
+          Accedé al <b>proyecto de After Effects</b> y a los <b>recursos gráficos</b> desde el link de Drive.
+        </p>
         <a class="btn solid" href="${DOWNLOADS_LINK}" target="_blank" rel="noopener">⬇ Abrir carpeta de descargas</a>
+        <hr style="border:0;border-top:1px solid rgba(255,255,255,.10);margin:14px 0;">
+        <h3>El curso que necesitas para potenciar tus habilidades en el mundo audiovisual</h3>
+        <p>
+          Durante este taller, te ayudaré a desarrollar las habilidades necesarias para convertirte en un artista y estar preparado para ingresar a un estudio o tener éxito como freelancer.
+          A través de este curso aprenderás técnicas y habilidades claves para convertirte en un profesional versátil capaz de trabajar en cualquier proyecto audiovisual.
+          El curso de <b>After Effects 3D</b> ha sido diseñado para adaptarse a estudiantes de todos los niveles, desde aquellos que recién comienzan en el mundo del diseño en movimiento,
+          hasta los que ya tienen experiencia y desean profundizar sus conocimientos. El contenido se enfoca en brindar una formación completa y detallada, para que puedas expandir tus habilidades
+          y desarrollar nuevas técnicas creativas, independientemente de tu nivel de experiencia previo. Si quieres crear gráficos en movimiento para diferentes industrias como videojuegos,
+          comerciales, películas, animaciones o web, este taller es para vos. <b>¡Inscribite hoy mismo!</b> y accede a todas las herramientas necesarias para llevar tus habilidades al siguiente nivel.
+        </p>
       `);
     };
 
     btnComments.onclick = () => {
       showHomeOverlay("Comentarios", `
+        <h3>Dejá tu comentario</h3>
+        <p style="margin-bottom:12px;">
+          Cada vez que envíes un mensaje, me llega un aviso al mail <b>emmamel.fx@gmail.com</b>.
+        </p>
         <form action="https://formsubmit.co/emmamel.fx@gmail.com" method="POST">
           <input type="hidden" name="_subject" value="Nuevo comentario del curso (Aula privada)" />
           <input type="hidden" name="_captcha" value="false" />
@@ -926,9 +991,9 @@
       ];
       const chipsHtml = chips.map(c => `<button class="chip" type="button" data-mid="${c.mid}">${c.label}</button>`).join("");
       showHomeOverlay("Grupo de temas", `
-        <div style="font-size:14px;color:var(--muted);line-height:1.55;margin-bottom:12px;">
+        <p style="margin-bottom:12px;">
           Elegí un tema y te llevo directo a ese bloque en la lista de la derecha.
-        </div>
+        </p>
         <div>${chipsHtml}</div>
       `);
 
@@ -942,7 +1007,7 @@
     };
 
     function focusModule(mid){
-      const target = document.querySelector(`.module[data-mid="${mid}"]`);
+      const target = document.querySelector(\`.module[data-mid="\${mid}"]\`);
       if(!target) return;
       const body = target.querySelector(".moduleBody");
       if(body && body.style.display === "none"){
