CURSO AE 3D.html

--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
     // 20 clases (05/06 juntas) + Resultado final = 21 “videos” si contás bienvenida aparte en el header.
     const lessons = [
       { t:"01 - Introducción", d:"Breve introducción al curso.", url:"https://youtu.be/D1IC09GeKZs" },
-      { t:"02 - Retos de entorno 3D", d:"Arrancamos el workshop y el enfoque del entorno 3D.", url:"https://youtu.be/HVBjwflEPBA" },
+      { t:"02 - Refes de entornos 3D", d:"Arrancamos el workshop y el enfoque del entorno 3D.", url:"https://youtu.be/HVBjwflEPBA" },
       { t:"03 - Objetivos", d:"Qué vas a lograr y cómo vamos a trabajarlo.", url:"https://youtu.be/4USqAIWAIqc" },
       { t:"04 - Manos a la obra", d:"Setup y primeros pasos del proyecto.", url:"https://youtu.be/LaMZVjZ1se4" },
       { t:"05 y 06 - Photoshop", d:"Preparación de recursos y ajustes (ambas clases en un solo video).", url:"https://youtu.be/wyMZ_Equajc" },
