--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   --font-display: 'Poppins', sans-serif;
   --font-body: 'DM Sans', sans-serif;
   --max: 1440px;
-  --sidebar-w: 320px;
+  --sidebar-w: 380px;
 }
 *, *::before, *::after { box-sizing: border-box; margin: 0; padding: 0; }
 html { scroll-behavior: smooth; }
@@ -114,13 +114,13 @@ nav {
   border-bottom: 1px solid var(--border);
   flex-shrink: 0;
 }
-.sidebar-head h2 { font-family: var(--font-display); font-size: 15px; font-weight: 700; }
-.sidebar-head p { font-size: 11px; color: var(--muted); margin-top: 2px; }
-.search-wrap { padding: 10px 12px; border-bottom: 1px solid var(--border); flex-shrink: 0; }
+.sidebar-head h2 { font-family: var(--font-display); font-size: 16px; font-weight: 700; }
+.sidebar-head p { font-size: 13px; color: var(--muted); margin-top: 2px; }
+.search-wrap { padding: 12px 14px; border-bottom: 1px solid var(--border); flex-shrink: 0; }
 .search-wrap input {
-  width: 100%; padding: 9px 13px; border-radius: 7px;
+  width: 100%; padding: 11px 14px; border-radius: 8px;
   border: 1px solid var(--border2); background: rgba(255,255,255,.04);
-  color: var(--txt); font-family: var(--font-body); font-size: 12px; outline: none;
+  color: var(--txt); font-family: var(--font-body); font-size: 13px; outline: none;
   transition: border-color .2s;
 }
 .search-wrap input:focus { border-color: rgba(0,229,200,.35); }
@@ -139,8 +139,8 @@ nav {
   position: sticky; top: 0; z-index: 5; backdrop-filter: blur(10px);
   display: flex; align-items: baseline; gap: 8px;
 }
-.group-label span { font-family: var(--font-display); font-size: 10px; font-weight: 700; letter-spacing: .8px; text-transform: uppercase; color: var(--muted); }
-.group-label em { font-style: normal; font-size: 10px; color: var(--muted2); }
+.group-label span { font-family: var(--font-display); font-size: 12px; font-weight: 700; letter-spacing: .8px; text-transform: uppercase; color: var(--muted); }
+.group-label em { font-style: normal; font-size: 12px; color: var(--muted2); }
 
 .lesson-item {
   width: 100%; text-align: left;
@@ -165,10 +165,10 @@ nav {
 .lesson-item.active .lesson-dot { background: var(--cyan); box-shadow: 0 0 8px rgba(0,229,200,.5); }
 .lesson-item.done .lesson-dot { background: var(--violet); box-shadow: 0 0 6px rgba(139,92,246,.4); }
 .lesson-text { flex: 1; min-width: 0; }
-.lesson-name { font-size: 12px; font-weight: 500; line-height: 1.35; color: var(--txt); }
+.lesson-name { font-size: 14px; font-weight: 500; line-height: 1.35; color: var(--txt); }
 .lesson-item.active .lesson-name { color: var(--cyan); font-weight: 600; }
-.lesson-desc { font-size: 11px; color: var(--muted); margin-top: 2px; line-height: 1.4; }
-.lesson-check { font-size: 10px; flex-shrink: 0; margin-top: 4px; color: var(--violet); opacity: 0; transition: opacity .2s; }
+.lesson-desc { font-size: 13px; color: var(--muted); margin-top: 2px; line-height: 1.4; }
+.lesson-check { font-size: 12px; flex-shrink: 0; margin-top: 4px; color: var(--violet); opacity: 0; transition: opacity .2s; }
 .lesson-item.done .lesson-check { opacity: 1; }
 
 /* MAIN */
@@ -233,9 +233,10 @@ nav {
 
 /* VIDEO EMBEDS */
 .video-box {
-  border-radius: 10px; overflow: hidden;
+  border-radius: 12px; overflow: hidden;
   border: 1px solid var(--border2); background: #000;
   box-shadow: 0 16px 48px rgba(0,0,0,.5);
+  max-width: 820px;
 }
 .video-box iframe { width: 100%; aspect-ratio: 16/9; display: block; border: none; }
 
@@ -261,20 +262,15 @@ nav {
 .stat-val { font-family: var(--font-display); font-size: 20px; font-weight: 800; color: var(--txt); }
 .stat-lbl { font-size: 11px; color: var(--muted); margin-top: 1px; }
 
-/* PLAYER LAYOUT - full width with sidebar overlay */
+/* PLAYER LAYOUT */
 #playerCard { display: none; }
-.player-layout {
-  display: grid;
-  grid-template-columns: 1fr;
-  gap: 0;
-}
 .player-video-wrap {
   background: #000;
-  border: 1px solid var(--border); border-radius: 14px;
+  border: 1px solid var(--border2); border-radius: 14px;
   overflow: hidden;
   box-shadow: 0 20px 60px rgba(0,0,0,.6);
 }
-.player-video-wrap iframe { width: 100%; aspect-ratio: 16/9; display: block; border: none; }
+.player-video-wrap iframe { width: 100%; aspect-ratio: 16/9; display: block; border: none; height: auto; }
 
 .player-info {
   padding: 20px 4px 0;
@@ -464,12 +460,10 @@ nav {
 
     <!-- PLAYER -->
     <div id="playerCard" class="anim">
-      <div class="player-layout">
-        <div class="player-video-wrap">
-          <iframe id="frame"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen></iframe>
-        </div>
+      <div class="player-video-wrap">
+        <iframe id="frame"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen></iframe>
       </div>
 
       <div class="player-info">
